Fix links not wrapping

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,8 @@ main {
 
 		.links {
 			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
 			justify-content: flex-end;
 		}
 	}
